--- a/SimCityScope.csproj
+++ b/SimCityScope.csproj
@@ -59,7 +59,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
-    <Content Include="magicnumbers.xml" />
+    <Content Include="magicnumbers.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
